Design for github pages

--- a/Tirsdag-28-04/index.html
+++ b/Tirsdag-28-04/index.html
@@ -7,6 +7,10 @@
 </head>
 
 <body>
+	<input type="button" onclick="location.href='../index.html';" value="Go back to start" />
+	<br>
+	<br>
+	<hr>
 
 	<h1>find 2 numbers closest to X</h1>
 	<div>Nummere til array 1</div>
