--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 </head>
 <body>
-    <input type="button" onclick="location.href='/Mandag-16-03';" value="Go to Mandag-16-03" />
-    <input type="button" onclick="location.href='/Tirsdag-28-04';" value="Go to Tirsdag-28-04" />
+    <input type="button" onclick="location.href='../Mandag-16-03';" value="Go to Mandag-16-03" />
+    <input type="button" onclick="location.href='../Tirsdag-28-04';" value="Go to Tirsdag-28-04" />
 
 </body>
