Trying one more time

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 </head>
 <body>
-    <a href="Corona-weeks/Mandag-16-03/index.html"><button>Go To Mandag-16-03</button></a>
-    <a href="Corona-weeks/Tirsdag-28-04/index.html"><button>Go To Tirsdag-28-04</button></a>
+    <a href="/Mandag-16-03/index.html"><button>Go To Mandag-16-03</button></a>
+    <a href="/Tirsdag-28-04/index.html"><button>Go To Tirsdag-28-04</button></a>
 
 </body>
