--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <body>
     <a href="./Mandag-16-03/index.html"><button>Go To Mandag-16-03</button></a>
     <a href="./Tirsdag-28-04/index.html"><button>Go To Tirsdag-28-04</button></a>
+    <a href="./Fredag-01-05/index.html"><button>Go to Fredag-01-05</button></a>
 
 </body>
