--- a/Mandag 11-05/index.html
+++ b/Mandag 11-05/index.html
@@ -230,11 +230,11 @@
     function opgave8(){
 
         if (number1 >= 20 && number1 <= 50){
-            document.getElementById("opgave8").value = "One number is in the range of 20 and 50";
+            document.getElementById("opgave8").value = "One or more number is in the range of 20 and 50";
         } else if (number2 >= 20 && number2 <= 50){
-            document.getElementById("opgave8").value = "One number is in the range of 20 and 50";
+            document.getElementById("opgave8").value = "One or more number is in the range of 20 and 50";
         } else if (number3 >= 20 && number3 <= 50){
-            document.getElementById("opgave8").value = "One number is in the range of 20 and 50";
+            document.getElementById("opgave8").value = "One or more number is in the range of 20 and 50";
         } else{
             document.getElementById("opgave8").value = "No numbers are in the range";
         }
