--- a/Mandag 11-05/index.html
+++ b/Mandag 11-05/index.html
@@ -240,6 +240,16 @@
         }
     }
 
+    function opgave9(){
+        if (number1 >= 20 && number1 <= 50){
+            document.getElementById("opgave9").value = "One or more number is in the range of 20 and 50";
+        } else if (number2 >= 20 && number2 <= 50){
+            document.getElementById("opgave9").value = "One or more number is in the range of 20 and 50";
+        } else {
+            document.getElementById("opgave9").value = "No values are in the range";
+        }
+
+    }
 
     
 
