--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <a href="./Tirsdag-28-04/index.html"><button>Go To Tirsdag-28-04</button></a>
     <a href="./Fredag-01-05/index.html"><button>Go to Fredag-01-05</button></a>
     <a href="./Torsdag-07-05/index.html"><button>Go to Torsdag-07-05</button></a>
-    <a href="./Mandag-16-05/index.html"><button>Go to Mandag-16-05</button></a>
+    <a href="./Mandag-11-05/index.html"><button>Go to Mandag-11-05</button></a>
+    <a href="./Tirsdag-12-05/index.html"><button>Go to Tirsdag-12-05</button></a>
 
 </body>
